package dominio.clima;

public enum AlertaMeteorologica {
  TORMENTA, GRANIZO
}
