package dominio.interesadoEnAlertas;

public interface Correo {

  void enviarCorreo(String email, String cuerpo);
}
