package dominio.interesadoEnAlertas;

public interface Notificador {

  void mostrarNotificacion(String mensaje);
}
