package dominio.usuario;

public class MailSender {

  public void send(String email, String texto) {
    // solo esta para que compile TODO
  }
}
