package dominio.usuario;

public class NotificationService {

  public void notify(String text) {
    // esto es solo para que compile TODO
  }
}
