package dominio.usuario;

public interface PropuestaGuardarropa {

  void aplicar();
  void deshacer();
}
